Finished Videos Feature and fixed alignment for it within the other components

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,9 +6,12 @@
 .section {
     @include desktop {
         @include flexbox;
+        max-width: 70rem;
+        margin: 0 auto;
     
         &__main {
             @include flexbox (column);
+            max-width: 70%;
         }
     }
 }
