--- a/src/components/Comments/Comments.scss
+++ b/src/components/Comments/Comments.scss
@@ -14,13 +14,15 @@
        @include tablet {
            @include flexbox (column);
            @include padding-tablet (0);
+           padding-bottom: 0;
            justify-content: space-between;
-           max-width: 70rem;
+           max-width: 67rem;
            margin: 0 auto;        
        }
 
        @include desktop {
-           width: 70rem;
+           padding-right: 0;
+           width: 50rem;
        }
 
     &__title {
@@ -59,6 +61,10 @@
             @include flexbox (row, 1.25rem);
             align-items: flex-end;
             width: 100%;
+        }
+
+        @include desktop {
+            padding-right: 1.5rem;
         }
     }
 
