--- a/src/components/Videos/Videos.scss
+++ b/src/components/Videos/Videos.scss
@@ -10,17 +10,15 @@
 
         // Start of Responsiveness
         @include tablet {
-            @include flexbox;
             @include padding-tablet (0);
-            justify-content: space-between;
-            max-width: 70rem;
+            max-width: 67rem;
             margin: 0 auto;
-            height: 5.6rem;            
-
         }
 
         @include desktop {
-            width: 70rem;
+            padding-top: 2.25rem;
+            padding-left: 2.25rem;
+            border-left: .0625rem solid $color-mercury;
         }
 
     &__title {
